cluster/kubernetes/owntracks/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: owntracks-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: owntracks-frontend
    spec:
      containers:
        - env:
            - name: SERVER_HOST
              value: "owntracks-recorder.owntracks.svc.cluster.local"
            - name: SERVER_PORT
              value: "8083"
          image: owntracks/frontend
          name: owntracks-frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
