cluster/kubernetes/owntracks/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: owntracks-frontend
  name: owntracks-frontend
spec:
  ports:
    - name: "web"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: owntracks-frontend
