cluster/kubernetes/owntracks/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: owntracks-recorder
  name: owntracks-recorder
spec:
  ports:
    - name: "recorder"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: owntracks-recorder
