cluster/kubernetes/owntracks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owntracks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: owntracks.anurag.sh
      http:
        paths:
          - path: /recorder
            pathType: Prefix
            backend:
              service:
                name: owntracks-recorder
                port:
                  number: 8083
  tls:
    - secretName: owntracks-tls
      hosts:
        - owntracks.anurag.sh
